--- a/angular.json
+++ b/angular.json
@@ -19,7 +19,12 @@
                         "polyfills": ["zone.js"],
                         "tsConfig": "tsconfig.app.json",
                         "assets": ["src/favicon.ico", "src/assets"],
-                        "styles": ["src/styles.css"],
+                        "styles": [
+                            "src/styles.css",
+                            "node_modules/primeicons/primeicons.css",
+                            "node_modules/primeng/resources/themes/lara-dark-teal/theme.css",
+                            "node_modules/primeng/resources/primeng.min.css"
+                        ],
                         "scripts": []
                     },
                     "configurations": {
