--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
     "primeicons": "^6.0.1",
     "primeng": "^16.7.0",
     "rxjs": "~7.8.0",
