--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "primeng": "^16.7.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "uuid": "^9.0.1",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.2.6",
     "@angular/cli": "^16.2.6",
     "@angular/compiler-cli": "^16.2.0",
+    "@types/uuid": "^9.0.7",
     "typescript": "~5.1.3"
   }
 }
