--- a/angular.json
+++ b/angular.json
@@ -8,7 +8,7 @@
             "schematics": {},
             "root": "",
             "sourceRoot": "src",
-            "prefix": "app",
+            "prefix": "riw",
             "architect": {
                 "build": {
                     "builder": "@angular-devkit/build-angular:browser",
