--- a/package.json
+++ b/package.json
@@ -21,16 +21,16 @@
     "express": "^4.18.2",
     "primeicons": "^6.0.1",
     "primeng": "^16.7.2",
-    "rxjs": "~7.8.0",
-    "tslib": "^2.3.0",
+    "rxjs": "^7.8.1",
+    "tslib": "^2.6.2",
     "uuid": "^9.0.1",
-    "zone.js": "~0.13.0"
+    "zone.js": "^0.13.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.2.6",
     "@angular/cli": "^16.2.6",
     "@angular/compiler-cli": "^16.2.0",
     "@types/uuid": "^9.0.7",
-    "typescript": "~5.1.3"
+    "typescript": "^5.1.6"
   }
 }
