--- a/angular.json
+++ b/angular.json
@@ -21,6 +21,7 @@
                         "assets": ["src/favicon.ico", "src/assets"],
                         "styles": [
                             "src/styles.css",
+                            "src/primeng-override.css",
                             "node_modules/primeicons/primeicons.css",
                             "node_modules/primeng/resources/themes/lara-dark-teal/theme.css",
                             "node_modules/primeng/resources/primeng.min.css"
