--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cors": "^2.8.5",
     "date-fns": "^2.30.0",
     "express": "^4.18.2",
+    "is-mobile": "^4.0.0",
     "primeicons": "^6.0.1",
     "primeng": "^16.7.2",
     "rxjs": "^7.8.1",
