Badge on dial for reminders, fixed tri-checkbox, style tweaks and format, few more utility functions, centralized mobile detection, CommonJS exception,

--- a/angular.json
+++ b/angular.json
@@ -26,6 +26,9 @@
                             "node_modules/primeng/resources/themes/lara-dark-teal/theme.css",
                             "node_modules/primeng/resources/primeng.min.css"
                         ],
+                        "allowedCommonJsDependencies": [
+                            "is-mobile"
+                        ],
                         "scripts": []
                     },
                     "configurations": {
