--- a/extra/attempted-ang17-upgrade/angular.json
+++ b/extra/attempted-ang17-upgrade/angular.json
@@ -26,6 +26,9 @@
                             "node_modules/primeng/resources/themes/lara-dark-teal/theme.css",
                             "node_modules/primeng/resources/primeng.min.css"
                         ],
+                        "allowedCommonJsDependencies": [
+                            "is-mobile"
+                        ],
                         "scripts": []
                     },
                     "configurations": {
