--- a/angular.json
+++ b/angular.json
@@ -33,7 +33,13 @@
                     },
                     "configurations": {
                         "production": {
-                            "outputHashing": "all"
+                            "outputHashing": "all",
+                            "fileReplacements": [
+                              {
+                                "replace": "src/environments/environment.ts",
+                                "with": "src/environments/environment.prod.ts"
+                              }
+                            ]
                         },
                         "development": {
                             "verbose": true,
@@ -42,8 +48,29 @@
                             "vendorChunk": true,
                             "extractLicenses": false,
                             "sourceMap": false,
-                            "namedChunks": true
-                        }
+                            "namedChunks": true,
+                            "fileReplacements": [
+                              {
+                                "replace": "src/environments/environment.ts",
+                                "with": "src/environments/environment.dev.ts"
+                              }
+                            ]
+                        },
+                        "live": {
+                          "verbose": true,
+                          "buildOptimizer": false,
+                          "optimization": false,
+                          "vendorChunk": true,
+                          "extractLicenses": false,
+                          "sourceMap": false,
+                          "namedChunks": true,
+                          "fileReplacements": [
+                            {
+                              "replace": "src/environments/environment.ts",
+                              "with": "src/environments/environment.live.ts"
+                            }
+                          ]
+                      }
                     },
                     "defaultConfiguration": "production"
                 },
@@ -55,6 +82,9 @@
                         },
                         "development": {
                             "browserTarget": "rememberitwholesale:build:development"
+                        },
+                        "live": {
+                          "browserTarget": "rememberitwholesale:build:live"
                         }
                     },
                     "defaultConfiguration": "development"
