--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^17.0.7",
     "@angular/platform-browser-dynamic": "^17.0.7",
     "@angular/router": "^17.0.7",
+    "config": "^3.3.9",
     "cors": "^2.8.5",
     "date-fns": "^2.30.0",
     "express": "^4.18.2",
