--- a/package.json
+++ b/package.json
@@ -25,8 +25,9 @@
     "date-fns": "^2.30.0",
     "express": "^4.18.2",
     "is-mobile": "^4.0.0",
+    "node-mailjet": "^6.0.5",
     "primeicons": "^6.0.1",
-    "primeng": "^17.1.0",
+    "primeng": "^17.3.2",
     "rxjs": "^7.8.1",
     "tslib": "^2.6.2",
     "uuid": "^9.0.1",
