--- a/angular.json
+++ b/angular.json
@@ -27,7 +27,8 @@
                             "node_modules/primeng/resources/primeng.min.css"
                         ],
                         "allowedCommonJsDependencies": [
-                            "is-mobile"
+                            "is-mobile",
+                            "date-fns"
                         ],
                         "scripts": []
                     },
