--- a/angular.json
+++ b/angular.json
@@ -27,8 +27,7 @@
                             "node_modules/primeng/resources/primeng.min.css"
                         ],
                         "allowedCommonJsDependencies": [
-                            "is-mobile",
-                            "date-fns"
+                            "is-mobile"
                         ],
                         "scripts": []
                     },
