--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "cors": "^2.8.5",
     "date-fns": "^3.3.0",
     "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5",
     "is-mobile": "^4.0.0",
     "node-mailjet": "^6.0.5",
     "primeicons": "^6.0.1",
