Prod server setup, so tweaking config to match

--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "rememberitwholesale",
   "version": "1.0",
   "scripts": {
-    "live": "ng serve --watch --configuration live --host 0.0.0.0 --public-host junk.scrapping.cc",
     "dev": "ng serve --watch --configuration development",
-    "prod": "ng serve --watch --configuration production",
-    "backend": "nodemon backend-node/maindata.js"
+    "prod": "ng serve --watch --configuration production --host 0.0.0.0 --public-host riw.homelinux.com",
+    "backend": "nodemon backend-node/maindata.js",
+    "build": "ng build --configuration production"
   },
   "engines": {
     "node": ">=20.0.0"
