Store sort order as a setting. Maximize some dialogs on mobile. Show instructions only on newer accounts. Add a Clear Favorite button. Fixed bug on multiple Add Things in a row. Fixed spacing issue in reminder panel. Don't show recently overdue reminders over and over on fetch. Turn off rate limiting on local env. Tweaked URLs to move away from DynDNS and to freedns

--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "rememberitwholesale",
   "version": "1.0",
   "scripts": {
-    "dev": "ng serve --watch --configuration development",
-    "prod": "ng serve --watch --configuration production --host 0.0.0.0 --public-host riw.homelinux.com",
+    "dev": "ng serve --watch --configuration development --no-live-reload",
+    "prod": "ng serve --watch --configuration production --host 0.0.0.0 --public-host riw.us.to",
     "backend": "nodemon backend-node/maindata.js",
     "build": "ng build --configuration production"
   },
