--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,7 @@
     "useDefineForClassFields": false,
     "lib": [
       "ES2022",
+      "ES2023.Array", /* For toSpliced and others */
       "dom"
     ],
     "paths": {
