Cleaned up server approach to use the API url dynamically from our window details, instead of hardcoded. This let's us have multiple URLs pointing to the app. Also checking on dynamic CORS as a result

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0",
   "scripts": {
     "dev": "ng serve --watch --configuration development --no-live-reload",
-    "prod": "ng serve --watch --configuration production --host 0.0.0.0 --public-host riw.us.to",
+    "prod": "ng serve --watch --configuration production --host 0.0.0.0",
     "backend": "nodemon backend-node/maindata.js",
     "build": "ng build --configuration production"
   },
