--- a/angular.json
+++ b/angular.json
@@ -23,8 +23,8 @@
                             "src/assets/css/styles.css",
                             "src/assets/css/primeng-override.css",
                             "src/assets/themes/lara-dark-teal_theme_v16.css",
-                            "node_modules/primeicons/primeicons.css",
-                            "node_modules/primeng/resources/primeng.min.css"
+                            "primeicons/primeicons.css",
+                            "primeng/resources/primeng.min.css"
                         ],
                         "allowedCommonJsDependencies": [
                             "is-mobile"
