--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express": "^4.19.2",
     "express-rate-limit": "^7.2.0",
     "is-mobile": "^4.0.0",
+    "marked": "^12.0.1",
     "node-mailjet": "^6.0.5",
     "primeicons": "^7.0.0",
     "primeng": "^17.12.0",
