--- a/package.json
+++ b/package.json
@@ -12,35 +12,35 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^17.3.2",
-    "@angular/cdk": "^17.3.2",
-    "@angular/common": "^17.3.2",
-    "@angular/compiler": "^17.3.2",
-    "@angular/core": "^17.3.2",
-    "@angular/forms": "^17.3.2",
-    "@angular/platform-browser": "^17.3.2",
-    "@angular/platform-browser-dynamic": "^17.3.2",
-    "@angular/router": "^17.3.2",
+    "@angular/animations": "^17.3.8",
+    "@angular/cdk": "^17.3.8",
+    "@angular/common": "^17.3.8",
+    "@angular/compiler": "^17.3.8",
+    "@angular/core": "^17.3.8",
+    "@angular/forms": "^17.3.8",
+    "@angular/platform-browser": "^17.3.8",
+    "@angular/platform-browser-dynamic": "^17.3.8",
+    "@angular/router": "^17.3.8",
     "config": "^3.3.11",
     "cors": "^2.8.5",
     "date-fns": "^3.6.0",
     "express": "^4.19.2",
     "express-rate-limit": "^7.2.0",
     "is-mobile": "^4.0.0",
-    "marked": "^12.0.1",
+    "marked": "^12.0.2",
     "node-mailjet": "^6.0.5",
     "primeicons": "^7.0.0",
-    "primeng": "^17.12.0",
+    "primeng": "~17.15.0",
     "rxjs": "^7.8.1",
     "tslib": "^2.6.2",
     "uuid": "^9.0.1",
-    "zone.js": "^0.14.4"
+    "zone.js": "^0.14.5"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^17.3.2",
-    "@angular/cli": "^17.3.2",
-    "@angular/compiler-cli": "^17.3.2",
+    "@angular-devkit/build-angular": "^17.3.7",
+    "@angular/cli": "^17.3.7",
+    "@angular/compiler-cli": "^17.3.8",
     "@types/uuid": "^9.0.8",
-    "typescript": "^5.4.3"
+    "typescript": "^5.4.5"
   }
 }
