--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "marked": "^12.0.2",
     "node-mailjet": "^6.0.5",
     "primeicons": "^7.0.0",
-    "primeng": "~17.15.0",
+    "primeng": "17.16.0",
     "rxjs": "^7.8.1",
     "tslib": "^2.6.2",
     "uuid": "^9.0.1",
