--- a/package.json
+++ b/package.json
@@ -12,15 +12,15 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^17.3.8",
-    "@angular/cdk": "^17.3.8",
-    "@angular/common": "^17.3.8",
-    "@angular/compiler": "^17.3.8",
-    "@angular/core": "^17.3.8",
-    "@angular/forms": "^17.3.8",
-    "@angular/platform-browser": "^17.3.8",
-    "@angular/platform-browser-dynamic": "^17.3.8",
-    "@angular/router": "^17.3.8",
+    "@angular/animations": "^17.3.9",
+    "@angular/cdk": "^17.3.9",
+    "@angular/common": "^17.3.9",
+    "@angular/compiler": "^17.3.9",
+    "@angular/core": "^17.3.9",
+    "@angular/forms": "^17.3.9",
+    "@angular/platform-browser": "^17.3.9",
+    "@angular/platform-browser-dynamic": "^17.3.9",
+    "@angular/router": "^17.3.9",
     "config": "^3.3.11",
     "cors": "^2.8.5",
     "date-fns": "^3.6.0",
@@ -30,16 +30,16 @@
     "marked": "^12.0.2",
     "node-mailjet": "^6.0.5",
     "primeicons": "^7.0.0",
-    "primeng": "17.16.0",
+    "primeng": "^17.17.0",
     "rxjs": "^7.8.1",
     "tslib": "^2.6.2",
     "uuid": "^9.0.1",
-    "zone.js": "^0.14.5"
+    "zone.js": "^0.14.6"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^17.3.7",
     "@angular/cli": "^17.3.7",
-    "@angular/compiler-cli": "^17.3.8",
+    "@angular/compiler-cli": "^17.3.9",
     "@types/uuid": "^9.0.8",
     "typescript": "^5.4.5"
   }
