--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "cors": "^2.8.5",
     "date-fns": "^3.6.0",
     "express": "^4.19.2",
+    "express-fileupload": "^1.5.0",
     "express-rate-limit": "^7.2.0",
     "is-mobile": "^4.0.0",
     "marked": "^12.0.2",
