--- a/angular.json
+++ b/angular.json
@@ -18,7 +18,10 @@
                         "main": "src/main.ts",
                         "polyfills": ["zone.js"],
                         "tsConfig": "tsconfig.app.json",
-                        "assets": ["src/favicon.ico", "src/assets"],
+                        "assets": [
+                          "src/public.html",
+                          "src/assets"
+                        ],
                         "styles": [
                             "src/assets/css/styles.css",
                             "src/assets/css/primeng-override.css",
