Tweak to rate limiter as it wasn't removing as expected. And sort pub gallery files above images

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "dev": "ng serve --watch --configuration development --no-live-reload",
     "prod": "ng serve --watch --configuration production --host 0.0.0.0",
+    "backend-dev": "NODE_ENV=development nodemon backend-node/maindata.js",
     "backend": "NODE_ENV=production nodemon backend-node/maindata.js",
     "build": "ng build --configuration production"
   },
