--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "^17.3.9",
     "@angular/platform-browser-dynamic": "^17.3.9",
     "@angular/router": "^17.3.9",
+    "archiver": "^7.0.1",
     "config": "^3.3.11",
     "cors": "^2.8.5",
     "date-fns": "^3.6.0",
