--- a/angular.json
+++ b/angular.json
@@ -11,11 +11,12 @@
             "prefix": "riw",
             "architect": {
                 "build": {
-                    "builder": "@angular-devkit/build-angular:browser",
+                    "builder": "@angular/build:application",
                     "options": {
-                        "outputPath": "dist/rememberitwholesale",
+                        "outputPath": {
+                          "base": "dist/rememberitwholesale"
+                        },
                         "index": "src/index.html",
-                        "main": "src/main.ts",
                         "polyfills": ["zone.js"],
                         "tsConfig": "tsconfig.app.json",
                         "assets": [
@@ -32,7 +33,8 @@
                         "allowedCommonJsDependencies": [
                             "is-mobile"
                         ],
-                        "scripts": []
+                        "scripts": [],
+                        "browser": "src/main.ts"
                     },
                     "configurations": {
                         "production": {
@@ -46,9 +48,7 @@
                         },
                         "development": {
                             "verbose": true,
-                            "buildOptimizer": false,
                             "optimization": false,
-                            "vendorChunk": true,
                             "extractLicenses": false,
                             "sourceMap": false,
                             "namedChunks": true,
@@ -63,7 +63,7 @@
                     "defaultConfiguration": "production"
                 },
                 "serve": {
-                    "builder": "@angular-devkit/build-angular:dev-server",
+                    "builder": "@angular/build:dev-server",
                     "configurations": {
                         "production": {
                             "buildTarget": "rememberitwholesale:build:production"
