--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^18.1.1",
-    "@angular/cdk": "^17.3.9",
+    "@angular/cdk": "^18.1.1",
     "@angular/common": "^18.1.1",
     "@angular/compiler": "^18.1.1",
     "@angular/core": "^18.1.1",
@@ -22,28 +22,29 @@
     "@angular/platform-browser": "^18.1.1",
     "@angular/platform-browser-dynamic": "^18.1.1",
     "@angular/router": "^18.1.1",
+    "@types/marked": "^6.0.0",
     "archiver": "^7.0.1",
-    "config": "^3.3.11",
+    "config": "^3.3.12",
     "cors": "^2.8.5",
     "date-fns": "^3.6.0",
     "express": "^4.19.2",
-    "express-fileupload": "^1.5.0",
-    "express-rate-limit": "^7.2.0",
+    "express-fileupload": "^1.5.1",
+    "express-rate-limit": "^7.3.1",
     "is-mobile": "^4.0.0",
-    "marked": "^12.0.2",
+    "marked": "^13.0.2",
     "node-mailjet": "^6.0.5",
     "primeicons": "^7.0.0",
-    "primeng": "^17.17.0",
+    "primeng": "^17.18.5",
     "rxjs": "^7.8.1",
-    "tslib": "^2.6.2",
-    "uuid": "^9.0.1",
-    "zone.js": "^0.14.6"
+    "tslib": "^2.6.3",
+    "uuid": "^10.0.0",
+    "zone.js": "^0.14.8"
   },
   "devDependencies": {
     "@angular/build": "^18.1.1",
     "@angular/cli": "^18.1.1",
     "@angular/compiler-cli": "^18.1.1",
-    "@types/uuid": "^9.0.8",
-    "typescript": "^5.4.5"
+    "@types/uuid": "^10.0.0",
+    "typescript": "^5.5.4"
   }
 }
