Remove Ang 18 SSR approach to the dist directory as we don't need 'browser' in there too

--- a/angular.json
+++ b/angular.json
@@ -14,7 +14,8 @@
                     "builder": "@angular/build:application",
                     "options": {
                         "outputPath": {
-                          "base": "dist/rememberitwholesale"
+                          "base": "dist/",
+                          "browser": ""
                         },
                         "index": "src/index.html",
                         "polyfills": ["zone.js"],
