--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "primeicons": "^7.0.0",
     "primeng": "^17.18.9",
     "rxjs": "^7.8.1",
+    "sharp": "^0.33.5",
     "tslib": "^2.6.3",
     "uuid": "^10.0.0",
     "yazl": "^2.5.1",
