--- a/angular.json
+++ b/angular.json
@@ -22,6 +22,7 @@
                         "tsConfig": "tsconfig.app.json",
                         "assets": [
                           "src/public.html",
+                          "src/robots.txt",
                           "src/assets"
                         ],
                         "styles": [
