--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "^18.2.8",
     "@angular/platform-browser-dynamic": "^18.2.8",
     "@angular/router": "^18.2.8",
+    "compression": "^1.8.0",
     "config": "^3.3.12",
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
