Add a simple minify to public.html after the build

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "prod": "ng serve --watch --configuration production --host 0.0.0.0",
     "backend-dev": "NODE_ENV=development nodemon backend-node/maindata.js",
     "backend": "NODE_ENV=production nodemon backend-node/maindata.js",
-    "build": "ng build --configuration production"
+    "build": "ng build --configuration production",
+    "postbuild": "minify src/public.html > dist/public.html || echo '> If minify failed, install it'"
   },
   "engines": {
     "node": ">=20.0.0"
