Slight tweak to use built in Node --watch instead of nodemon

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "scripts": {
     "dev": "ng serve --watch --configuration development --no-live-reload",
     "prod": "ng serve --watch --configuration production --host 0.0.0.0",
-    "backend-dev": "NODE_ENV=development nodemon backend-node/maindata.js",
-    "backend": "NODE_ENV=production nodemon backend-node/maindata.js",
+    "backend-dev": "NODE_ENV=development node --watch --watch-preserve-output backend-node/maindata.js",
+    "backend": "NODE_ENV=production node --watch --watch-preserve-output backend-node/maindata.js",
     "build": "ng build --configuration production",
     "postbuild": "minify src/public.html > dist/public.html || echo '> If minify failed, install it'"
   },
